--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p id = "test-title">平方根a√bテスト</p>
 
 <section id = "modal" class = "hidden">
-    <p>合格！！よくできました。</p>
+    <p id = "win">クリア！！</p>
     <a><img src="img/win.png"> </a>
     <br>
 <button id = "close">問題選択へ</button>
