--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
  <img src="img/ok.png"> 
 </section>
 
-<button name="No1" id ="No1" class="No1"    onclick="buttonClick1()">  その１  </button>
-<button name="No2" id ="No2" class="No1"  onclick="buttonClick2()" >  その２  </button>
-<button name="No3" id ="No3" class="No1" onclick="buttonClick3()">  その３  </button>
+<button name="No1" id ="No1" class="No1"    onclick="buttonClick1()">  Lv.１  </button>
+<button name="No2" id ="No2" class="No1"  onclick="buttonClick2()" >  Lv.２  </button>
+<button name="No3" id ="No3" class="No1" onclick="buttonClick3()">  Lv.３  </button>
+<button name="No4" id ="No4" class="No1" onclick="buttonClick4()">  Lv.４  </button>
+<!-- <button name="test1" id ="test1" class="No1" onclick="buttonClickT1()">  TEST1  </button>
+<button name="test2" id ="test2" class="No1" onclick="buttonClickT2()">  TEST2  </button> -->
 
 
 <input id="reset"  type="button" value="リセット" onclick="buttonClick5();"/>
@@ -47,7 +50,6 @@
 
 <form name = "kotae">
     <input id ="yanswer" type="text" class="display" name="display" value="" disabled  >  
-  
 </form>
 
  
