--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p id ="question"> 問題を選ぶ。</p>
 
 <form name = "kotae">
-    <input id ="yanswer" type="text" class="display" name="display" value="" disabled  >  
+    <input id ="yanswer" type="text" class="display" name="display" value=""  >  
 </form>
 
  
