--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <br>   
 <div id ="Qnum">  </div> 
 <p id ="timescore"> 制限時間</p>
-<p id ="question"> 問題を選ぶ。</p>
+<div id ="question"> 問題を選ぶ。</div>
 
 
 
